--- a/dotnet/CrmBlazorApp/Shared/NavMenu.razor
+++ b/dotnet/CrmBlazorApp/Shared/NavMenu.razor
@@ -25,8 +25,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="todo">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Todo
+            <NavLink class="nav-link" href="client">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Client
             </NavLink>
         </div>
     </nav>
