--- a/dotnet/CrmBlazorApp/Shared/NavMenu.razor
+++ b/dotnet/CrmBlazorApp/Shared/NavMenu.razor
@@ -15,18 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="vendors">
+                <span class="oi oi-plus" aria-hidden="true"></span> Vendor
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="client">
+            <NavLink class="nav-link" href="clients">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Client
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="orders">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Order
             </NavLink>
         </div>
     </nav>
