--- a/dotnet/CrmBlazorApp/Pages/ClientProducts.razor
+++ b/dotnet/CrmBlazorApp/Pages/ClientProducts.razor
@@ -59,7 +59,7 @@ else
 
 @code {
     private DbModels.ClientProduct[]? products;
-    private DbModels.Client? client;
+    private Data.ClientDTO? client;
 
     [Parameter]
     public int? ClientId { get; set; } = null;  // Default value is null for render a blank page
