--- a/dotnet/CrmBlazorApp/Pages/Clients.razor
+++ b/dotnet/CrmBlazorApp/Pages/Clients.razor
@@ -25,7 +25,7 @@ else
                 <tr>
                     <th>Id</th>
                     <th>Name</th>
-                    <th>CountryId</th>
+                    <th>Country</th>
                     <th>Products</th>
                     <th>Orders</th>
                 </tr>
